# basesdk

./: .gitignore  CMakeLists.txt  Makefile  README.md  ReadMe.txt  libbaseservice.h
inc/: aes.h  base64.h  baseDataType.h  cThread.h  config.h  global.h  img.h  log.h  msgTransport.h  segmentfault.h  zlibnet.h
src/: CMakeLists.txt  aes.cpp  base64.cpp  baseDataType.cpp  config.cpp  dir.cpp  global.cpp  global.h  img.cpp  libbaseservice.cpp  log.cpp  msgTransport.cpp  segmentfault.cpp  zlibnet.cpp
src/config/: config.cpp  config.h
src/crypto/: aes.cpp  aes.h  base64.cpp  base64.h
src/event/: msgTransport.cpp  msgTransport.h
src/img/: img.cpp  img.h
src/log/: log.cpp  log.h  segmentfault.cpp  segmentfault.h
src/net/: zlibnet.cpp  zlibnet.h
src/thread/: cThread.cpp  cThread.h
src/threadSafe/: baseDataType.cpp  baseDataType.h
test/: CMakeLists.txt  testmain.cpp
